--- a/p0261intentfilter/src/main/res/layout/info.xml
+++ b/p0261intentfilter/src/main/res/layout/info.xml
@@ -8,12 +8,12 @@
     tools:context=".Info">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/tvInfo"
-        android:text="TextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="20dp"
-        android:textSize="30sp">
-    </TextView>
+        android:gravity="center"
+        android:text="TextView"
+        android:textSize="30sp"></TextView>
 </LinearLayout>
