--- a/p0291simpleactivityresult/src/main/res/layout/main.xml
+++ b/p0291simpleactivityresult/src/main/res/layout/main.xml
@@ -30,7 +30,8 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="5dp"
             android:layout_weight="1"
-            android:text="Input name"></Button>
+            android:text="Input name">
+        </Button>
         <Button
             android:id="@+id/btnColor"
             android:layout_width="match_parent"
