--- a/p0331sharedpreferences/src/main/res/layout/main.xml
+++ b/p0331sharedpreferences/src/main/res/layout/main.xml
@@ -30,18 +30,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <Button
             android:id="@+id/btnSave"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Save">
-        </Button>
+            android:layout_height="40dp"
+            android:text="Save" />
+
         <Button
             android:id="@+id/btnLoad"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Load">
-        </Button>
+            android:layout_height="40dp"
+            android:text="Load" />
     </LinearLayout>
 
     <TextView
@@ -64,7 +64,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="29dp"
-            android:text="ID"></TextView>
+            android:text="ID" />
 
         <EditText
             android:id="@+id/etID"
@@ -73,18 +73,18 @@
             android:layout_marginTop="2dp"
             android:background="@android:drawable/editbox_background_normal"
             android:inputType="number" />
+
         <Button
             android:id="@+id/btnUpd"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Update">
-        </Button>
+            android:layout_height="40dp"
+            android:text="Update" />
+
         <Button
             android:id="@+id/btnDel"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Delete">
-        </Button>
+            android:layout_height="40dp"
+            android:text="Delete" />
     </LinearLayout>
 
     <LinearLayout
@@ -100,7 +100,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
-            android:text="Name"></TextView>
+            android:text="Name" />
 
         <EditText
             android:id="@+id/etName"
@@ -125,7 +125,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="8dp"
-            android:text="Email"></TextView>
+            android:text="Email" />
 
         <EditText
             android:id="@+id/etEmail"
@@ -133,7 +133,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@android:drawable/editbox_background_normal"
-            android:inputType="textEmailAddress"></EditText>
+            android:inputType="textEmailAddress" />
     </LinearLayout>
 
     <LinearLayout
@@ -141,24 +141,157 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <Button
             android:id="@+id/btnAdd"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Add">
-        </Button>
+            android:layout_height="40dp"
+            android:text="Add" />
+
         <Button
             android:id="@+id/btnRead"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Read">
-        </Button>
+            android:layout_height="40dp"
+            android:text="Read" />
+
         <Button
             android:id="@+id/btnClear"
             android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:text="Clear" />
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Условие, сортировка, группировка"
+        android:textColor="@color/colorAccent"
+        android:textSize="18sp"
+        android:textStyle="bold|italic" />
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Справочник стран"
+        android:textSize="14sp"
+        android:gravity="center_horizontal"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="5dp">
+    </TextView>
+
+    <Button
+        android:id="@+id/btnAll"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_marginTop="5dp"
+        android:text="Все записи" />
+
+    <LinearLayout
+        android:id="@+id/linearLayout6"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btnFunc"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:text="Функция" />
+        <EditText
+            android:id="@+id/etFunc"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Clear">
+            android:layout_weight="1"
+            android:background="@android:drawable/editbox_background_normal">
+            <requestFocus>
+            </requestFocus>
+        </EditText>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout7"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btnPeople"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:text="Население" />
+        <EditText
+            android:id="@+id/etPeople"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:inputType="number"
+            android:background="@android:drawable/editbox_background_normal">
+        </EditText>
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/btnGroup"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_marginTop="5dp"
+        android:text="Население по региону" />
+
+    <LinearLayout
+        android:id="@+id/linearLayout8"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btnHaving"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:text="Население по региону >" />
+
+        <EditText
+            android:id="@+id/etRegionPeople"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@android:drawable/editbox_background_normal"
+            android:inputType="number" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout9"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/btnSort"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Сортировка">
         </Button>
+        <RadioGroup
+            android:id="@+id/rgSort"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <RadioButton
+                android:id="@+id/rName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checked="true"
+                android:text="Наименование">
+            </RadioButton>
+            <RadioButton
+                android:id="@+id/rPeople"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Население">
+            </RadioButton>
+            <RadioButton
+                android:id="@+id/rRegion"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Регион">
+            </RadioButton>
+        </RadioGroup>
     </LinearLayout>
 
 </LinearLayout>
