--- a/p0331sharedpreferences/src/main/res/layout/main.xml
+++ b/p0331sharedpreferences/src/main/res/layout/main.xml
@@ -188,7 +188,7 @@
         android:id="@+id/textView4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Условие, сортировка, группировка"
+        android:text="Условие, сортировка, группировка в SQLite"
         android:textColor="@color/colorAccent"
         android:textSize="18sp"
         android:textStyle="bold|italic" />
@@ -196,7 +196,37 @@
     <Button
         android:id="@+id/btnSQL"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:text="Query" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Транзакции в SQLite"
+        android:textColor="@color/colorAccent"
+        android:textSize="18sp"
+        android:textStyle="bold|italic" />
+
+    <Button
+        android:id="@+id/btnTransaction"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:text="Transaction" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Обновление базы данных в SQLite"
+        android:textColor="@color/colorAccent"
+        android:textSize="18sp"
+        android:textStyle="bold|italic" />
+
+    <Button
+        android:id="@+id/btnOnUpgradeBDSQLite"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:text="on_Upgrade" />
 
 </LinearLayout>
